vlib/v/checker/tests/inout/match_expr_else.out
vlib/v/checker/tests/inout/match_expr_else.v:5:7: error: match must be exhaustive (add match branches for: `f64` or an else{} branch)
    3| fn main() {
    4|     x := A('test')
    5|     _ := match x {
                  ~~~~~~~~~
    6|         int {
    7|             'int'
