vlib/v/checker/tests/inout/match_expr_else.vv
type A = int | string | f64

fn main() {
	x := A('test')
	_ := match x {
		int {
			'int'
		}
		string {
			'string'
		}
	}
}
